(feat): se añade toda la logica de guardado, modificado y consulta por id para cada una de las cards

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=erp_backend
+spring.datasource.url=jdbc:mysql://localhost:3306/erp_backend?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin123
+spring.jpa.hibernate.ddl-auto=update
