--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0-M2'
+	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
 }
 
 tasks.named('test') {
